<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="40dp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developed_by"
            android:textSize="11sp"
            android:textStyle="italic"/>

        <ImageView
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:src="@drawable/ic_educator_image"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/cover_image" />

<!--        Phone Number       -->
        <LinearLayout
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_phone_message"
                android:textColor="@color/black" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/country_code_indonesia"
                    android:textSize="18sp"
                    android:layout_margin="0dp"/>
                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="phone"
                    android:hint="@string/default_phone_hint"
                    android:autofillHints="emailAddress"
                    android:textSize="18sp"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_submit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login" />
        </LinearLayout>

<!--        OTP       -->
        <LinearLayout
            android:id="@+id/otp_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_otp_message"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/otp_code"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="number"
                android:hint="@string/otp_hint"
                android:autofillHints="emailAddress"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/btn_submit_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/verify_btn_message" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>